@@ -1,3 +1,8 @@
+2003-10-12  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/tclUnixTest.c (TestalarmCmd): don't bother checking return
+	value of alarm. [Bug #664755] (english)
+
 2003-10-08  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclBasic.c:	Save and restore the iPtr->flag bits that
@@ -77,8 +82,8 @@
 
 	* tests/fileName.test:
 	* tests/winFCmd.test:
-        * doc/FileSystem.3: backported various test and documentation
-        changes from HEAD.  Backport of actual code fixes to follow.
+	* doc/FileSystem.3: backported various test and documentation
+	changes from HEAD.  Backport of actual code fixes to follow.
 
 2003-10-02  Don Porter  <dgp@users.sourceforge.net>
 
